--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@ MANIFEST
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports
+# Unit tests / coverage reports
 htmlcov/
 .tox/
 .nox/
@@ -127,3 +127,13 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+
+/.idea
+.idea
+/__pycache__
+__pycache__
+
+.DS_Store
+
+.env.local
