--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -22,9 +22,9 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Test By Pytest
+      - name: Test By Pylint
         run:
-          pytest pyvalidation
+          pylint pyvalidation
 
       - name: Python Unit Test
         run:
