--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -22,11 +22,17 @@ jobs:
         with:
           python-version: "3.10"
 
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pylint
+          pip instal unittest
+
       - name: Test By Pylint
-        run:
+        run: |
           pylint pyvalidation
 
       - name: Python Unit Test
-        run:
+        run: |
           python -m unittest
 
