--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pylint
-          pip instal unittest
+          pip install unittest
 
       - name: Test By Pylint
         run: |
