Validation : DateTime Added

--- a/.pylintrc
+++ b/.pylintrc
@@ -8,6 +8,7 @@ disable=
     R0903, #( Too few public methods )
     E1101, # Instance of 'MongoEngine'
     W0703, # Catching too general exception Exception (broad-except)
+    R0911, #Too many return statements
     #should remove
     R0201, #Method could be a function (no-self-use)
     W0613, #Unused argument 'key' (unused-argument)
