fix git action yml

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Test By Pylint
         run: |
-          pylint pyvalidations
+          pylint src
 
       - name: Python Unit Test
         run: |
